fixed truncate length

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -66,7 +66,7 @@ textarea {
  font-weight:400;
  font-size:11px;
 }
-.panel .panel-default {
+.panel .panel-home {
  border-color:#cccccc;
  height: 300px;
 
